syntax = "proto3";

option csharp_namespace = "HushNetwork.proto";

package rpcHush;

service HushFeed {
  rpc GetFeedByAddress (GetFeedByAddressRequest) returns (GetFeedByAddressReply);
  rpc CreateFeed (CreateFeedRequest) returns (CreateFeedReply);
}

message GetFeedByAddressRequest {
  string ProfilePublicKey = 1;
}

message GetFeedByAddressReply {

  message Feed {
    string FeedId = 1;
    string FeedTitle = 2;
    string FeedOWner = 3;
    int32 FeedType = 4;
    int64 BlockIndex = 5;
  }

  repeated Feed Feeds = 1; 
}

message CreateFeedRequest {
  string FeedId = 1;
  int32 FeedType = 2;
  string Issuer = 3;
  string FeedParticipantPublicAddress = 4;
  string FeedPublicEncriptAddress = 5;
  string FeedPrivateEncriptAddress = 6;
  string Hash = 7;
  string Signature = 8;
}

message CreateFeedReply {
  bool Successfull = 1;
  string Message = 2;
}